lab5handout/y.output
   0  $accept : program $end

   1  program : exp

   2  id : ID

   3  exp : lvalue
   4      | NIL
   5      | INT
   6      | STRING
   7      | MINUS exp
   8      | LPAREN seqexp RPAREN
   9      | exp OR exp
  10      | exp AND exp
  11      | exp PLUS exp
  12      | exp MINUS exp
  13      | exp TIMES exp
  14      | exp DIVIDE exp
  15      | exp EQ exp
  16      | exp NEQ exp
  17      | exp LT exp
  18      | exp GT exp
  19      | exp LE exp
  20      | exp GE exp
  21      | id LPAREN explist RPAREN
  22      | id LBRACE efieldlist RBRACE
  23      | lvalue ASSIGN exp
  24      | id LBRACK exp RBRACK OF exp
  25      | IF exp THEN exp ELSE exp
  26      | IF exp THEN exp
  27      | WHILE exp DO exp
  28      | FOR id ASSIGN exp TO exp DO exp
  29      | BREAK
  30      | LET declist IN seqexp END

  31  lvalue : id
  32         | lvalue DOT id
  33         | id LBRACK exp RBRACK
  34         | lvalue LBRACK exp RBRACK

  35  efield :
  36         | id EQ exp

  37  efieldlist : efield
  38             | efield COMMA efieldlist

  39  explist :
  40          | exp
  41          | exp COMMA explist

  42  expseq :
  43         | exp
  44         | exp SEMICOLON expseq

  45  seqexp : expseq

  46  declist : dec
  47          | dec declist

  48  dec : VAR id ASSIGN exp
  49      | VAR id COLON id ASSIGN exp
  50      | fundeclist
  51      | tydeclist

  52  ty : id
  53     | LBRACE tyfields RBRACE
  54     | ARRAY OF id

  55  tyfield : id COLON id

  56  tyfields :
  57           | tyfield
  58           | tyfield COMMA tyfields

  59  fundec : FUNCTION id LPAREN tyfields RPAREN EQ exp
  60         | FUNCTION id LPAREN tyfields RPAREN COLON id EQ exp

  61  fundeclist : fundec
  62             | fundec fundeclist

  63  tydec : TYPE id EQ ty

  64  tydeclist : tydec
  65            | tydec tydeclist

state 0
	$accept : . program $end  (0)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	program  goto 12
	exp  goto 13
	lvalue  goto 14
	id  goto 15


state 1
	id : ID .  (2)

	.  reduce 2


state 2
	exp : STRING .  (6)

	.  reduce 6


state 3
	exp : INT .  (5)

	.  reduce 5


state 4
	exp : LPAREN . seqexp RPAREN  (8)
	expseq : .  (42)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	RPAREN  reduce 42

	exp  goto 16
	seqexp  goto 17
	expseq  goto 18
	lvalue  goto 14
	id  goto 15


state 5
	exp : MINUS . exp  (7)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 19
	lvalue  goto 14
	id  goto 15


state 6
	exp : IF . exp THEN exp ELSE exp  (25)
	exp : IF . exp THEN exp  (26)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 20
	lvalue  goto 14
	id  goto 15


state 7
	exp : WHILE . exp DO exp  (27)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 21
	lvalue  goto 14
	id  goto 15


state 8
	exp : FOR . id ASSIGN exp TO exp DO exp  (28)

	ID  shift 1
	.  error

	id  goto 22


state 9
	exp : LET . declist IN seqexp END  (30)

	FUNCTION  shift 23
	VAR  shift 24
	TYPE  shift 25
	.  error

	dec  goto 26
	declist  goto 27
	fundec  goto 28
	fundeclist  goto 29
	tydec  goto 30
	tydeclist  goto 31


state 10
	exp : BREAK .  (29)

	.  reduce 29


state 11
	exp : NIL .  (4)

	.  reduce 4


state 12
	$accept : program . $end  (0)

	$end  accept


state 13
	program : exp .  (1)
	exp : exp . OR exp  (9)
	exp : exp . AND exp  (10)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . TIMES exp  (13)
	exp : exp . DIVIDE exp  (14)
	exp : exp . EQ exp  (15)
	exp : exp . NEQ exp  (16)
	exp : exp . LT exp  (17)
	exp : exp . GT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GE exp  (20)

	PLUS  shift 32
	MINUS  shift 33
	TIMES  shift 34
	DIVIDE  shift 35
	EQ  shift 36
	NEQ  shift 37
	LT  shift 38
	LE  shift 39
	GT  shift 40
	GE  shift 41
	AND  shift 42
	OR  shift 43
	$end  reduce 1


state 14
	exp : lvalue .  (3)
	exp : lvalue . ASSIGN exp  (23)
	lvalue : lvalue . DOT id  (32)
	lvalue : lvalue . LBRACK exp RBRACK  (34)

	LBRACK  shift 44
	DOT  shift 45
	ASSIGN  shift 46
	$end  reduce 3
	COMMA  reduce 3
	SEMICOLON  reduce 3
	RPAREN  reduce 3
	RBRACK  reduce 3
	RBRACE  reduce 3
	PLUS  reduce 3
	MINUS  reduce 3
	TIMES  reduce 3
	DIVIDE  reduce 3
	EQ  reduce 3
	NEQ  reduce 3
	LT  reduce 3
	LE  reduce 3
	GT  reduce 3
	GE  reduce 3
	AND  reduce 3
	OR  reduce 3
	THEN  reduce 3
	ELSE  reduce 3
	TO  reduce 3
	DO  reduce 3
	IN  reduce 3
	END  reduce 3
	FUNCTION  reduce 3
	VAR  reduce 3
	TYPE  reduce 3


15: shift/reduce conflict (shift 48, reduce 31) on LBRACK
state 15
	exp : id . LPAREN explist RPAREN  (21)
	exp : id . LBRACE efieldlist RBRACE  (22)
	exp : id . LBRACK exp RBRACK OF exp  (24)
	lvalue : id .  (31)
	lvalue : id . LBRACK exp RBRACK  (33)

	LPAREN  shift 47
	LBRACK  shift 48
	LBRACE  shift 49
	$end  reduce 31
	COMMA  reduce 31
	SEMICOLON  reduce 31
	RPAREN  reduce 31
	RBRACK  reduce 31
	RBRACE  reduce 31
	DOT  reduce 31
	PLUS  reduce 31
	MINUS  reduce 31
	TIMES  reduce 31
	DIVIDE  reduce 31
	EQ  reduce 31
	NEQ  reduce 31
	LT  reduce 31
	LE  reduce 31
	GT  reduce 31
	GE  reduce 31
	AND  reduce 31
	OR  reduce 31
	ASSIGN  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	TO  reduce 31
	DO  reduce 31
	IN  reduce 31
	END  reduce 31
	FUNCTION  reduce 31
	VAR  reduce 31
	TYPE  reduce 31


state 16
	exp : exp . OR exp  (9)
	exp : exp . AND exp  (10)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . TIMES exp  (13)
	exp : exp . DIVIDE exp  (14)
	exp : exp . EQ exp  (15)
	exp : exp . NEQ exp  (16)
	exp : exp . LT exp  (17)
	exp : exp . GT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GE exp  (20)
	expseq : exp .  (43)
	expseq : exp . SEMICOLON expseq  (44)

	SEMICOLON  shift 50
	PLUS  shift 32
	MINUS  shift 33
	TIMES  shift 34
	DIVIDE  shift 35
	EQ  shift 36
	NEQ  shift 37
	LT  shift 38
	LE  shift 39
	GT  shift 40
	GE  shift 41
	AND  shift 42
	OR  shift 43
	RPAREN  reduce 43
	END  reduce 43


state 17
	exp : LPAREN seqexp . RPAREN  (8)

	RPAREN  shift 51
	.  error


state 18
	seqexp : expseq .  (45)

	.  reduce 45


state 19
	exp : MINUS exp .  (7)
	exp : exp . OR exp  (9)
	exp : exp . AND exp  (10)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . TIMES exp  (13)
	exp : exp . DIVIDE exp  (14)
	exp : exp . EQ exp  (15)
	exp : exp . NEQ exp  (16)
	exp : exp . LT exp  (17)
	exp : exp . GT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GE exp  (20)

	.  reduce 7


state 20
	exp : exp . OR exp  (9)
	exp : exp . AND exp  (10)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . TIMES exp  (13)
	exp : exp . DIVIDE exp  (14)
	exp : exp . EQ exp  (15)
	exp : exp . NEQ exp  (16)
	exp : exp . LT exp  (17)
	exp : exp . GT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GE exp  (20)
	exp : IF exp . THEN exp ELSE exp  (25)
	exp : IF exp . THEN exp  (26)

	PLUS  shift 32
	MINUS  shift 33
	TIMES  shift 34
	DIVIDE  shift 35
	EQ  shift 36
	NEQ  shift 37
	LT  shift 38
	LE  shift 39
	GT  shift 40
	GE  shift 41
	AND  shift 42
	OR  shift 43
	THEN  shift 52
	.  error


state 21
	exp : exp . OR exp  (9)
	exp : exp . AND exp  (10)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . TIMES exp  (13)
	exp : exp . DIVIDE exp  (14)
	exp : exp . EQ exp  (15)
	exp : exp . NEQ exp  (16)
	exp : exp . LT exp  (17)
	exp : exp . GT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GE exp  (20)
	exp : WHILE exp . DO exp  (27)

	PLUS  shift 32
	MINUS  shift 33
	TIMES  shift 34
	DIVIDE  shift 35
	EQ  shift 36
	NEQ  shift 37
	LT  shift 38
	LE  shift 39
	GT  shift 40
	GE  shift 41
	AND  shift 42
	OR  shift 43
	DO  shift 53
	.  error


state 22
	exp : FOR id . ASSIGN exp TO exp DO exp  (28)

	ASSIGN  shift 54
	.  error


state 23
	fundec : FUNCTION . id LPAREN tyfields RPAREN EQ exp  (59)
	fundec : FUNCTION . id LPAREN tyfields RPAREN COLON id EQ exp  (60)

	ID  shift 1
	.  error

	id  goto 55


state 24
	dec : VAR . id ASSIGN exp  (48)
	dec : VAR . id COLON id ASSIGN exp  (49)

	ID  shift 1
	.  error

	id  goto 56


state 25
	tydec : TYPE . id EQ ty  (63)

	ID  shift 1
	.  error

	id  goto 57


state 26
	declist : dec .  (46)
	declist : dec . declist  (47)

	FUNCTION  shift 23
	VAR  shift 24
	TYPE  shift 25
	IN  reduce 46

	dec  goto 26
	declist  goto 58
	fundec  goto 28
	fundeclist  goto 29
	tydec  goto 30
	tydeclist  goto 31


state 27
	exp : LET declist . IN seqexp END  (30)

	IN  shift 59
	.  error


28: shift/reduce conflict (shift 23, reduce 61) on FUNCTION
state 28
	fundeclist : fundec .  (61)
	fundeclist : fundec . fundeclist  (62)

	FUNCTION  shift 23
	IN  reduce 61
	VAR  reduce 61
	TYPE  reduce 61

	fundec  goto 28
	fundeclist  goto 60


state 29
	dec : fundeclist .  (50)

	.  reduce 50


30: shift/reduce conflict (shift 25, reduce 64) on TYPE
state 30
	tydeclist : tydec .  (64)
	tydeclist : tydec . tydeclist  (65)

	TYPE  shift 25
	IN  reduce 64
	FUNCTION  reduce 64
	VAR  reduce 64

	tydec  goto 30
	tydeclist  goto 61


state 31
	dec : tydeclist .  (51)

	.  reduce 51


state 32
	exp : exp PLUS . exp  (11)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 62
	lvalue  goto 14
	id  goto 15


state 33
	exp : exp MINUS . exp  (12)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 63
	lvalue  goto 14
	id  goto 15


state 34
	exp : exp TIMES . exp  (13)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 64
	lvalue  goto 14
	id  goto 15


state 35
	exp : exp DIVIDE . exp  (14)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 65
	lvalue  goto 14
	id  goto 15


state 36
	exp : exp EQ . exp  (15)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 66
	lvalue  goto 14
	id  goto 15


state 37
	exp : exp NEQ . exp  (16)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 67
	lvalue  goto 14
	id  goto 15


state 38
	exp : exp LT . exp  (17)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 68
	lvalue  goto 14
	id  goto 15


state 39
	exp : exp LE . exp  (19)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 69
	lvalue  goto 14
	id  goto 15


state 40
	exp : exp GT . exp  (18)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 70
	lvalue  goto 14
	id  goto 15


state 41
	exp : exp GE . exp  (20)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 71
	lvalue  goto 14
	id  goto 15


state 42
	exp : exp AND . exp  (10)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 72
	lvalue  goto 14
	id  goto 15


state 43
	exp : exp OR . exp  (9)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 73
	lvalue  goto 14
	id  goto 15


state 44
	lvalue : lvalue LBRACK . exp RBRACK  (34)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 74
	lvalue  goto 14
	id  goto 15


state 45
	lvalue : lvalue DOT . id  (32)

	ID  shift 1
	.  error

	id  goto 75


state 46
	exp : lvalue ASSIGN . exp  (23)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 76
	lvalue  goto 14
	id  goto 15


state 47
	exp : id LPAREN . explist RPAREN  (21)
	explist : .  (39)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	RPAREN  reduce 39

	exp  goto 77
	explist  goto 78
	lvalue  goto 14
	id  goto 15


state 48
	exp : id LBRACK . exp RBRACK OF exp  (24)
	lvalue : id LBRACK . exp RBRACK  (33)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 79
	lvalue  goto 14
	id  goto 15


state 49
	exp : id LBRACE . efieldlist RBRACE  (22)
	efield : .  (35)

	ID  shift 1
	COMMA  reduce 35
	RBRACE  reduce 35

	efieldlist  goto 80
	efield  goto 81
	id  goto 82


state 50
	expseq : exp SEMICOLON . expseq  (44)
	expseq : .  (42)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	RPAREN  reduce 42
	END  reduce 42

	exp  goto 16
	expseq  goto 83
	lvalue  goto 14
	id  goto 15


state 51
	exp : LPAREN seqexp RPAREN .  (8)

	.  reduce 8


state 52
	exp : IF exp THEN . exp ELSE exp  (25)
	exp : IF exp THEN . exp  (26)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 84
	lvalue  goto 14
	id  goto 15


state 53
	exp : WHILE exp DO . exp  (27)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 85
	lvalue  goto 14
	id  goto 15


state 54
	exp : FOR id ASSIGN . exp TO exp DO exp  (28)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	.  error

	exp  goto 86
	lvalue  goto 14
	id  goto 15


state 55
	fundec : FUNCTION id . LPAREN tyfields RPAREN EQ exp  (59)
	fundec : FUNCTION id . LPAREN tyfields RPAREN COLON id EQ exp  (60)

	LPAREN  shift 87
	.  error


state 56
	dec : VAR id . ASSIGN exp  (48)
	dec : VAR id . COLON id ASSIGN exp  (49)

	COLON  shift 88
	ASSIGN  shift 89
	.  error


state 57
	tydec : TYPE id . EQ ty  (63)

	EQ  shift 90
	.  error


state 58
	declist : dec declist .  (47)

	.  reduce 47


state 59
	exp : LET declist IN . seqexp END  (30)
	expseq : .  (42)

	ID  shift 1
	STRING  shift 2
	INT  shift 3
	LPAREN  shift 4
	MINUS  shift 5
	IF  shift 6
	WHILE  shift 7
	FOR  shift 8
	LET  shift 9
	BREAK  shift 10
	NIL  shift 11
	END  reduce 42

	exp  goto 16
	seqexp  goto 91
	expseq  goto 18
	lvalue  goto 14
	id  goto 15


state 60
	fundeclist : fundec fundeclist .  (62)

	.  reduce 62


state 61
	tydeclist : tydec tydeclist .  (65)

	.  reduce 65


state 62
	exp : exp . OR exp  (9)
	exp : exp . AND exp  (10)
	exp : exp . PLUS exp  (11)
	exp : exp PLUS exp .  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . TIMES exp  (13)
	exp : exp . DIVIDE exp  (14)
	exp : exp . EQ exp  (15)
	exp : exp . NEQ exp  (16)
	exp : exp . LT exp  (17)
	exp : exp . GT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GE exp  (20)

	TIMES  shift 34
	DIVIDE  shift 35
	$end  reduce 11
	COMMA  reduce 11
	SEMICOLON  reduce 11
	RPAREN  reduce 11
	RBRACK  reduce 11
	RBRACE  reduce 11
	PLUS  reduce 11
	MINUS  reduce 11
	EQ  reduce 11
	NEQ  reduce 11
	LT  reduce 11
	LE  reduce 11
	GT  reduce 11
	GE  reduce 11
	AND  reduce 11
	OR  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	TO  reduce 11
	DO  reduce 11
	IN  reduce 11
	END  reduce 11
	FUNCTION  reduce 11
	VAR  reduce 11
	TYPE  reduce 11


state 63
	exp : exp . OR exp  (9)
	exp : exp . AND exp  (10)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp MINUS exp .  (12)
	exp : exp . TIMES exp  (13)
	exp : exp . DIVIDE exp  (14)
	exp : exp . EQ exp  (15)
	exp : exp . NEQ exp  (16)
	exp : exp . LT exp  (17)
	exp : exp . GT exp  (18)
	exp : exp . LE exp  (19)
	exp : exp . GE exp  (20)

	TIMES  shift 34
	DIVIDE  shift 35
	$end  reduce 12
	COMMA  reduce 12
	SEMICOLON  reduce 12
	RPAREN  reduce 12
	RBRACK  reduce 12
	RBRACE  reduce 12
	PLUS  reduce 12
	MINUS  reduce 12
	EQ  reduce 12
	NEQ  reduce 12
	LT  reduce 12
	LE  reduce 12
	GT  reduce 12
	GE  reduce 12
	AND  reduce 12
	OR  reduce 12
	THEN  reduce 12
	ELSE  reduce 12
	TO  reduce 12
	DO  reduce 12
	IN  reduce 12
	END  reduce 12
	FUNCTION  reduce 12
	VAR  reduce 12
	TYPE  reduce 12

